add interfaces and readme